Added footer details

--- a/about.html
+++ b/about.html
@@ -26,7 +26,10 @@
   <main>
     <section class="about">
       <h1>About Me</h1>
-      <p>Here you can write about your background, your interests, and your journey as a Full Stack Engineer.</p>
+      <p>I am Shivam Jadhav, a Full Stack Engineer with expertise in frontend and backend technologies. I am currently
+        pursuing a Master of Science in Computer Science at the University of North Texas, Denton, Texas, United States.
+        Expected Graduation: May 2025.</p>
+      <p>Contact: jadhavshivam0228@gmail.com | +1 (940) 843 9864</p>
     </section>
   </main>
   <footer>
