added blog and skills section

--- a/index.html
+++ b/index.html
@@ -26,20 +26,18 @@
         <li><a href="#blog">Blog</a></li>
         <!-- <li class="burger-icon"><a href="#index.html">&#9776;</a></li> -->
 
-        <!-- <li><a href="#contact">Contact Me</a></li> -->
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
-  <main>
-    <section class="carousel">
-      <div class="slide">
-        <img src="./assests/img1.png" alt="Carousel Image 1">
-      </div>
-      <div style="display: none;" class="slide">
-        <img src="./assests/img3.png" alt="Carousel Image 2">
-      </div>
-    </section>
-  </main>
+  <section class="carousel">
+    <div class="slide">
+      <img src="./assests/img1.png" alt="Carousel Image 1">
+    </div>
+    <div style="display: none;" class="slide">
+      <img src="./assests/img3.png" alt="Carousel Image 2">
+    </div>
+  </section>
   <section id="about">
     <h1>About Me</h1>
     <p>Hi, I'm <strong>Shivam Jadhav </strong> <br>
@@ -429,7 +427,37 @@
       </form>
     </div>
   </section> -->
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <div class="contact-container">
+      <div class="contact-card">
+        <img src="./assests/icons/email.png" alt="Email">
+        <h3>Email</h3>
+        <p>jadhavshivam0228@gmail.com</p>
+      </div>
+      <div class="contact-card">
+        <img src="./assests/icons/phone-call.png" alt="phone">
+        <h3>phone</h3>
+        <p>9408439864</p>
+      </div>
+      <div class="contact-card">
+        <img src="./assests/icons/linkedin.png" alt="LinkedIn">
+        <h3>LinkedIn</h3>
+        <p><a href="https://www.linkedin.com/in/shivam-jadhav-1152921b0/" target="_blank">linkedin</a></p>
+      </div>
 
+      <div class="contact-card">
+        <img src="./assests/icons/github.png" alt="GitHub">
+        <h3>GitHub</h3>
+        <p><a href="https://github.com/shivamjadhav2000" target="_blank">github</a></p>
+      </div>
+      <div class="contact-card">
+        <img src="./assests/icons/medium.png" alt="Medium">
+        <h3>Medium</h3>
+        <p><a href="https://medium.com/@jadhavshivam0228" target="_blank">medium</a></p>
+      </div>
+    </div>
+  </section>
   <footer>
     <p>© 2024 Shivam Jadhav</p>
     <div class="social-media">
